--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
   background: #006989;
   width: 100%;
   height: 100vh;
@@ -22,11 +21,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 400px;
-  max-height: 550px;
+  min-width: 400px;
+  max-width: fit-content;
+  max-height: fit-content;
   border-radius: 10px;
   padding: 5px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 5px 15px;
 }
 
 .hidden {
